Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/EOFinString.ru
/? Error léxico, defino EOF dentro de un string
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 21 | ERROR EOF DENTRO DE STRING "soy un ejemplo $EOF$
"soy un ejemplo $EOF$ ola"